THF-GRID Completo
Integração com FIRABASE e leitura de arquivo CSV em componente THF-GRID.

--- a/src/app/hello-world/hello-world.component.html
+++ b/src/app/hello-world/hello-world.component.html
@@ -11,4 +11,12 @@
       [t-columns]="colunas">
     </thf-grid>
   </div>
+  <div class="thf-upload">
+    <thf-upload
+      name="upload"
+      t-label="Totvs Upload"
+      (t-upload)="Upload($event)"
+      [t-url]=url>
+    </thf-upload>
+  </div>
 </thf-page-default>
